--- a/.travis.yml
+++ b/.travis.yml
@@ -1,114 +1,49 @@
-# Setting java 1.8 
+sudo: true
+
 language: android
-jdk:
-  - oraclejdk8
 
-sudo: required # disables container-based builds which have a maximum of 4GB of memory
-
-# caching as advised by travis
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
-  - $HOME/.android/build-cache
+jdk: oraclejdk8
 
 env:
-  matrix:
-  - EMULATOR_API_LEVEL=27  ANDROID_EMULATOR_IMAGE=sys-img-armeabi-v7a-android-27
-
   global:
-    - ANDROID_API_LEVEL=27
+    - GRADLE_OPTS='-Dorg.gradle.daemon=false -Dorg.gradle.parallel=false -Dkotlin.incremental=false -DdisablePreDex'
+    - ANDROID_TARGET=android-27
     - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-    - ADB_INSTALL_TIMEOUT=20 # wait up to 20 minutes for adb to connect to emulator (2 minutes by default)
     - ANDROID_ABI=armeabi-v7a
-    
+    - ANDROID_EMULATOR_TARGET=android-22
+
 android:
   components:
-    # Base components 
-    - tools # to get the new `repository-11.xml`
-    - tools # https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
-    - platform-tools   
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION # get the build tools version to build the project
-
-    # used sdk versions
-    - android-$ANDROID_API_LEVEL # get the android sdk version to build the project
-    - android-$EMULATOR_API_LEVEL # get the android sdk version for the emulator
-
-    # Get the latest version of additional components
-    - extra-android-support
-    - extra-google-m2repository
-    - extra-android-m2repository
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - $ANDROID_TARGET
+    - $ANDROID_EMULATOR_TARGET
     - extra-google-google_play_services
-
-    # Specify the needed emulator
-    - $ANDROID_EMULATOR_IMAGE
+    - extra-android-support
+    - extra
+    - sys-img-$ANDROID_ABI-$ANDROID_EMULATOR_TARGET
 
 licenses:
   - 'android-sdk-license-.+'
-  - '.+'
 
-# Emulator Management: Create, Start and Wait
 before_install:
-  - echo $ANDROID_TARGET 
-  - echo $ANDROID_ABI
-  - adb logcat > logcat.log &
-  # Install SDK license so Android Gradle plugin can install deps.
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  # Install the rest of tools (e.g., avdmanager)
-  - sdkmanager tools
-  # Install the system image
-  - sdkmanager "system-images;android-18;default;armeabi-v7a"
-  # Create and start emulator for the script. Meant to race the install task.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-27;default;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
-
-install:
-  - sdkmanager --list || true # List all available targets, device definitions and AVDs.
-  # Update sdk tools to latest version and install/update components
-  - echo yes | sdkmanager "tools"
-  - echo yes | sdkmanager "platform-tools"
-  - echo yes | sdkmanager "build-tools;"$ANDROID_BUILD_TOOLS_VERSION
-  - echo yes | sdkmanager "platforms;android-"$ANDROID_API_LEVEL # Latest platform required by SDK tools
-
-  - echo yes | sdkmanager "extras;android;m2repository"
-  - echo yes | sdkmanager "extras;google;m2repository"
-  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2"
-  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
-
-  - echo yes | sdkmanager --update
-  - echo yes | sdkmanager --licenses
-
-  # Check components status
-  - sdkmanager --list || true
+  - echo yes | sdkmanager "platforms;$ANDROID_TARGET" "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
 
 before_script:
-  # Create and start the emulator
-  - sdkmanager "system-images;android-"$EMULATOR_API_LEVEL";google_apis;armeabi-v7a"
-  - echo no | avdmanager -v create avd -f -n test -k "system-images;android-"$EMULATOR_API_LEVEL";google_apis;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
+  - sudo service postgresql stop || true
+  - sudo service mysql stop || true
+  - sudo service memcached stop || true
+  - sudo service bootlogd stop || true
+  - sudo service elasticsearch stop || true
+  - sudo service mongodb stop || true
+  - sudo service cassandra stop || true
+  - sudo service rsync stop || true
+  - sudo service x11-common stop || true
 
-  - android-wait-for-emulator
-
-  # Turn off animations
-  - adb shell settings put global window_animation_scale 0 &
-  - adb shell settings put global transition_animation_scale 0 &
-  - adb shell settings put global animator_duration_scale 0 &
-
-  # Wake up
-  - adb shell input keyevent 82 &
-  - adb shell input keyevent 1 &
 script:
-  - ./gradlew test # Local unit test
-  - ./gradlew connectedAndroidTest # Instrumented unit test
-  - ./gradlew lint #maybe at some point
-  #- ./gradlew clean test build
-after_script:
-  - echo $ANDROID_TARGET 
-  - echo $ANDROID_ABI
-  - cat /home/travis/build/Countly/countly-sdk-android/sdk-messaging/build/outputs/lint-results-debug.xml
-  - cat /home/travis/build/Countly/countly-sdk-android/sdk/build/reports/androidTests/connected/index.html
+  - echo no | android create avd --force -n test -t $ANDROID_EMULATOR_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-window &
+  - ./gradlew check
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - ./gradlew :demo:connectedAndroidTest
