--- a/.travis.yml
+++ b/.travis.yml
@@ -46,4 +46,4 @@ script:
   - ./gradlew check
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-  - ./gradlew :demo:connectedAndroidTest
+  - ./gradlew :collapsingtoolbarlayout-subtitle:connectedAndroidTest
