--- a/collapsingtoolbarlayout-subtitle/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/AndroidManifest.xml
@@ -1,1 +1,1 @@
-<manifest package="com.hendraanggrian.collapsingtoolbarlayout.subtitle" />
+<manifest package="com.hendraanggrian.material.subtitlecollapsingtoolbarlayout" />
