--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.subtitlecollapsingtoolbarlayout">
+    package="com.hendraanggrian.material.subtitlecollapsingtoolbarlayout.demo">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="collapsingtoolbarlayout-subtitle"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".DemoActivity">
