--- a/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="28"
         tools:overrideLibrary="androidx.test, android.app, androidx.test.rule, androidx.test.espresso, androidx.test.espresso.idling" />
 
-    <application android:theme="@style/AppTheme">
+    <application android:theme="@style/Theme.Test">
         <uses-library android:name="android.test.runner" />
         <activity android:name=".activity.InstrumentedActivity" />
     </application>
