First release to Maven Central, no longer hardcode collapsed gravity

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,4 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+    - $HOME/.android/build-cache/
