--- a/.travis.yml
+++ b/.travis.yml
@@ -4,32 +4,11 @@ jdk: oraclejdk11
 
 android:
   components:
-    - tools
-    - platform-tools
     - build-tools-31.0.0
     - android-30
-    - android-22
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-22
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
-before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
-
-before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew connectedCheck --info
+  - ./gradlew check --info
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
