--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,27 @@
+os: linux
 language: android
-dist: trusty
-jdk: oraclejdk11
+jdk: openjdk11
+
+env:
+  global:
+    - TARGET_SDK=32
+    - BUILD_TOOLS=33.0.0
+    - ANDROID_HOME=~/android-sdk
 
 android:
   components:
-    - build-tools-31.0.0
-    - android-30
+    - tools
+    - platform-tools
+
+before_install:
+  - wget "https://dl.google.com/android/repository/commandlinetools-linux-7302050_latest.zip" -O commandlinetools.zip
+  - unzip commandlinetools.zip -d $ANDROID_HOME/
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "platforms;android-$TARGET_SDK" --sdk_root=$ANDROID_HOME
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;$BUILD_TOOLS" --sdk_root=$ANDROID_HOME
 
 script:
   - ./gradlew check --info
+  - ./gradlew createDebugCoverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
@@ -20,4 +33,4 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache/
+    - $HOME/.android/build-cache
