Custom jacoco task for 'test' because Android plugin only supports 'androidTest' coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 
 script:
   - ./gradlew check --info
-  - ./gradlew createDebugCoverageReport
+  - ./gradlew jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
