Match buildscript with `kotlin-starters`, root EditorConfig file, XML 2 spaced indentation. Temporarily disable sample module until personal libraries are deployed to Maven Central.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
+# Gradle
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+
 # IDEA
 kotlin.code.style=official
 
-# Gradle
-org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=2g
-
 # Android
 android.useAndroidX=true
-android.enableJetifier=true
