--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ script:
   - ./gradlew jacocoTestReport
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - curl -Os "https://uploader.codecov.io/latest/linux/codecov"
+  - chmod +x codecov
+  - ./codecov
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
