Re-enable sample module

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.subtitlecollapsingtoolbarlayout">
+    package="com.example.collapsingtoolbarlayoutsubtitle">
 
     <application
-        android:name=".App"
-        android:label="SubtitleCollapsingToolbarLayout Example"
+        android:name="com.example.collapsingtoolbarlayoutsubtitle.App"
+        android:label="collapsingtoolbarlayout-subtitle"
         android:theme="@style/Theme.Material3.DayNight.NoActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.collapsingtoolbarlayoutsubtitle.MainActivity"
             android:exported="true"
             android:forceDarkAllowed="true"
             tools:targetApi="q">
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DummyActivity"
+            android:name="com.example.collapsingtoolbarlayoutsubtitle.DummyActivity"
             android:exported="true"
             android:forceDarkAllowed="true"
             tools:targetApi="q"/>
