--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-jdk = "11"
+jdk = "11" # minimum for Android
 kotlin = "1.7.20"
 android-plugin = "7.3.1"
 android-jdk = "8"
 android-min = "14"
-android-target = "32"
+android-target = "33"
 androidx = "1.6.0"
-androidx-test = "1.4.0"
+androidx-test = "1.5.0"
 auto-prefs = "0.1-SNAPSHOT"
 color-preference = "1.1.0"
 
@@ -15,13 +15,13 @@ android-application = { id = "com.android.application", version.ref = "android-p
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
 kotlinx-kover = "org.jetbrains.kotlinx.kover:0.6.1"
-maven-publish = "com.vanniktech.maven.publish.base:0.21.0"
+maven-publish = "com.vanniktech.maven.publish.base:0.23.1"
 git-publish = "org.ajoberstar.git-publish:3.0.1"
 pages = "com.hendraanggrian.pages:0.1"
 
 [libraries]
 # lint
-rulebook-checkstyle = "com.hendraanggrian.rulebook:rulebook-checkstyle:0.1-SNAPSHOT"
+rulebook-checkstyle = "com.hendraanggrian.rulebook:rulebook-checkstyle:0.2-SNAPSHOT"
 # main
 kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 material = { module = "com.google.android.material:material", version.ref = "androidx" }
@@ -37,7 +37,7 @@ color-preference-support = { module = "com.github.kizitonwose.colorpreference:su
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 androidx-test-junit = "androidx.test.ext:junit:1.1.3"
-robolectric = "org.robolectric:robolectric:4.9"
+robolectric = "org.robolectric:robolectric:4.9.2"
 truth = "com.google.truth:truth:1.1.3"
 
 [bundles]
