Android plugin 8 and JDK 17, move maven configuration from buildSrc to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,16 @@
-# Gradle
+developerId=hendraanggrian
+developerName=Hendra Anggrian
+developerUrl=https://github.com/hendraanggrian/
+releaseGroup=com.hendraanggrian.material
+releaseArtifact=collapsingtoolbarlayout-subtitle
+releaseVersion=1.6.0-SNAPSHOT
+releaseDescription=Standard CollapsingToolbarLayout with subtitle support
+releaseUrl=https://github.com/hendraanggrian/collapsingtoolbarlayout-subtitle/
+
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 
-# IDEA
 kotlin.code.style=official
 
-# Android
 android.useAndroidX=true
+android.nonTransitiveRClass=false
