--- a/collapsingtoolbarlayout-subtitle/src/test/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/src/test/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.hendraanggrian.material.collapsingtoolbarlayoutsubtitle">
-
+<manifest xmlns:tools="http://schemas.android.com/tools">
     <uses-sdk tools:overrideLibrary="androidx.test.core"/>
     <application/>
 </manifest>
