--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-jdk = "11" # minimum for Android
-kotlin = "1.7.20"
-android-plugin = "7.3.1"
-android-jdk = "8"
-android-min = "14"
-android-target = "33"
+jdk = "17" # min for android
+checkstyle = "8.45.1"
+kotlin = "1.9.10"
+sdk-min = "14"
+sdk-target = "34"
+android-plugin = "8.1.4"
 androidx = "1.6.0"
 androidx-test = "1.5.0"
 auto-prefs = "0.1-SNAPSHOT"
@@ -14,16 +14,15 @@ color-preference = "1.1.0"
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
-kotlinx-kover = "org.jetbrains.kotlinx.kover:0.6.1"
-maven-publish = "com.vanniktech.maven.publish.base:0.23.1"
-git-publish = "org.ajoberstar.git-publish:3.0.1"
+maven-publish = "com.vanniktech.maven.publish.base:0.25.3"
+git-publish = "org.ajoberstar.git-publish:4.2.0"
 pages = "com.hendraanggrian.pages:0.1"
 
 [libraries]
 # lint
-rulebook-checkstyle = "com.hendraanggrian.rulebook:rulebook-checkstyle:0.2-SNAPSHOT"
+rulebook-checkstyle = "com.hendraanggrian.rulebook:rulebook-checkstyle:0.4"
 # main
-kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 material = { module = "com.google.android.material:material", version.ref = "androidx" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx" }
