--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-developerId=hendraanggrian
+developerId=hanggrian
 developerName=Hendra Anggrian
-developerUrl=https://github.com/hendraanggrian/
-releaseGroup=com.hendraanggrian.material
+developerUrl=https://github.com/hanggrian/
+releaseGroup=com.hanggrian
 releaseArtifact=collapsingtoolbarlayout-subtitle
-releaseVersion=1.6.0-SNAPSHOT
+releaseVersion=1.6.0
 releaseDescription=Standard CollapsingToolbarLayout with subtitle support
-releaseUrl=https://github.com/hendraanggrian/collapsingtoolbarlayout-subtitle/
+releaseUrl=https://github.com/hanggrian/collapsingtoolbarlayout-subtitle/
 
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
